# tokio-by-hand

./: Cargo.toml  README.md  feedback.md  notes.md
src/: lib.rs
src/extended/: adapter.rs  buffered.rs  delayed.rs  delayed_series.rs  instant.rs  instant_series.rs  mod.rs  sleeper.rs
src/standard/: buffered.rs  delayed.rs  delayed_series.rs  instant.rs  instant_series.rs  mod.rs  sleeper.rs
